--- a/produtos.html
+++ b/produtos.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="pt-BR">
-<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Produtos — PrimeZilla</title><link rel="stylesheet" href="style.css"></head>
+<head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Produtos — PrimeZilla</title>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
 <header class="topo">
   <img src="logo.png" class="logo" alt="PrimeZilla">
   <nav><a href="index.html">Início</a><a href="produtos.html">Produtos</a><a href="admin.html">Admin</a><a href="contato.html">Contato</a></nav>
 </header>
 
-<main style="max-width:1200px;margin:20px auto;padding:0 16px">
+<main style="max-width:1200px;margin:18px auto;padding:0 16px">
   <h2>Categorias</h2>
-  <div style="display:flex;gap:12px;flex-wrap:wrap;margin-bottom:18px">
+  <div class="cats">
     <button class="catBtn" data-cat="pods">Pods</button>
     <button class="catBtn" data-cat="acessorios">Acessórios</button>
     <button class="catBtn" data-cat="eletronicos">Eletrônicos</button>
@@ -20,33 +24,54 @@
   <div id="productsGrid" class="grid"></div>
 </main>
 
-<script>
-async function loadProducts(filter='all'){
-  const res = await fetch('/produtos.json',{cache:'no-store'});
-  const products = await res.json();
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
+  authDomain: "primezilla-70b94.firebaseapp.com",
+  projectId: "primezilla-70b94",
+  storageBucket: "primezilla-70b94.firebasestorage.app",
+  appId: "1:910803172382:web:db82186d77b8281f13020f"
+};
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+const PHONE = '5567992018672';
+
+function renderProducts(list, filter='all'){
   const grid = document.getElementById('productsGrid');
-  grid.innerHTML='';
-  products.filter(p=>p.active && (filter==='all' || p.category===filter)).forEach(p=>{
-    const img = (p.image && p.image.startsWith('data:')) ? p.image : (p.image || 'placeholder.png');
-    const priceText = p.price ? `${p.currency} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
+  grid.innerHTML = '';
+  list.forEach(p=>{
+    if(!p.active) return;
+    if(filter!=='all' && p.category !== filter) return;
+    const img = p.imageUrl || p.image || 'placeholder.png';
+    const priceText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
     const el = document.createElement('div'); el.className='card';
-    el.innerHTML = `
-      <img src="${img}" alt="${p.name}">
-      <h3>${p.name}</h3>
-      <p class="price">${priceText}</p>
-      <a class="botao whatsappBtn" href="#">Fazer pedido</a>
-    `;
-    el.querySelector('.whatsappBtn').addEventListener('click', ()=>{
+    el.innerHTML = `<img src="${img}" alt="${p.name}"><h3>${p.name}</h3><p class="price">${priceText}</p>
+      <a class="botao buy">Comprar via WhatsApp</a>`;
+    el.querySelector('.buy').addEventListener('click', ()=>{
       const variantLabel = (p.type==='pod')? 'Sabor':'Cor';
       const variant = (p.options && p.options[0])? p.options[0] : '-';
       const text = encodeURIComponent(`Olá! Tenho interesse no produto: ${p.name}\nQuantidade: 1\n${variantLabel}: ${variant}\nValor: ${priceText}\nForma de Pagamento: PIX`);
-      window.open(`https://wa.me/5567992018672?text=${text}`,'_blank');
+      window.open(`https://wa.me/${PHONE}?text=${text}`, '_blank');
     });
     grid.appendChild(el);
   });
+  if(grid.children.length===0) grid.innerHTML = '<p>Sem itens nesta categoria.</p>';
 }
-document.querySelectorAll('.catBtn').forEach(b=>b.addEventListener('click',()=>loadProducts(b.dataset.cat)));
-loadProducts();
+
+document.addEventListener('DOMContentLoaded', ()=>{
+  const q = query(collection(db,'products'), orderBy('createdAt','desc'));
+  onSnapshot(q, snap=>{
+    const arr = [];
+    snap.forEach(d=> arr.push(d.data()));
+    renderProducts(arr,'all');
+    document.querySelectorAll('.catBtn').forEach(btn=>{
+      btn.onclick = ()=> renderProducts(arr, btn.dataset.cat);
+    });
+  });
+});
 </script>
 </body>
 </html>
