--- a/admin.html
+++ b/admin.html
@@ -4,198 +4,136 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div style="max-width:980px;margin:18px auto;padding:12px">
+<div class="wrap">
   <h2>Admin — PrimeZilla</h2>
-  <p class="small">Modo GitHub: atualiza produtos.json no seu repo (recomendado). Modo Local: salva apenas no navegador.</p>
 
-  <div style="border:1px solid #eee;padding:12px;border-radius:8px;margin-bottom:12px">
-    <h3>Configuração GitHub (opcional para salvar no repo)</h3>
-    <p>Se quiser que o admin **publique** instantaneamente no GitHub, gere um <strong>Personal Access Token</strong> com escopo <code>repo</code> e cole abaixo.</p>
-    <label>Owner (seu usuário GitHub)</label>
-    <input id="ghOwner" placeholder="PrimeZillaBR"><br>
-    <label>Repo (nome do repo)</label>
-    <input id="ghRepo" placeholder="PrimeZillaBR.github.io"><br>
-    <label>Arquivo de dados (path)</label>
-    <input id="ghPath" value="produtos.json"><br>
-    <label>Personal Access Token (PAT)</label>
-    <input id="ghToken" placeholder="ghp_xxx (opcional)" style="width:100%"><br>
-    <button id="saveConfig" class="botao" style="margin-top:8px">Salvar Config</button>
-  </div>
-
-  <div style="border:1px solid #eee;padding:12px;border-radius:8px">
-    <h3>Adicionar / Editar Produto</h3>
-    <form id="productForm">
-      <label>Nome</label><input id="p_name" required><br>
-      <label>Preço (número)</label><input id="p_price" type="number" step="0.01"><br>
-      <label>Categoria</label><select id="p_cat"><option value="pods">Pods</option><option value="acessorios">Acessórios</option><option value="eletronicos">Eletrônicos</option><option value="outros">Outros</option></select><br>
-      <label>Tipo</label><select id="p_type"><option value="pod">Pod (usar sabores)</option><option value="non-pod">Não-pod (usar cores)</option></select><br>
-      <label>Opções (separadas por vírgula) — sabores ou cores</label><input id="p_opts" placeholder="Peach Mango, Menthol"><br>
-      <label>Imagem (arquivo) — será convertida em Base64</label><input id="p_image" type="file" accept="image/*"><br>
-      <label><input type="checkbox" id="p_active" checked> Ativo</label><br>
-      <input type="hidden" id="p_id">
-      <div style="margin-top:8px">
-        <button type="submit" class="botao">Salvar Produto</button>
-        <button type="button" id="exportBtn" class="botao" style="background:#444;margin-left:8px">Exportar JSON</button>
-      </div>
+  <div id="authArea">
+    <form id="loginForm">
+      <input id="email" placeholder="email" type="email" required><br><br>
+      <input id="password" placeholder="senha" type="password" required><br><br>
+      <button type="submit" class="botao">Entrar</button>
     </form>
+    <p class="small">Crie o usuário admin no Firebase Auth (Console → Authentication → Add user)</p>
   </div>
 
-  <hr>
-  <h3>Produtos cadastrados</h3>
-  <div id="list"></div>
-  <p style="margin-top:18px;color:#666">Obs: sem token, altera apenas no seu navegador (localStorage). Com token válido, salva no repo especificado.</p>
+  <div id="adminArea" style="display:none">
+    <p><strong id="who"></strong> — <button id="logout" class="botao">Logout</button></p>
+    <hr>
+    <h3>Adicionar produto</h3>
+    <form id="addForm">
+      <input id="p_name" placeholder="Nome do produto" required><br><br>
+      <input id="p_price" placeholder="Preço (ex: 39.90)"><br><br>
+      <select id="p_cat"><option value="pods">Pods</option><option value="acessorios">Acessórios</option><option value="eletronicos">Eletrônicos</option><option value="outros">Outros</option></select><br><br>
+      <select id="p_type"><option value="pod">Pod (usar sabores)</option><option value="non-pod">Não-pod (usar cores)</option></select><br><br>
+      <input id="p_opts" placeholder="Opções separadas por vírgula (ex: Peach Mango, Menthol)"><br><br>
+      <input id="p_image" type="file" accept="image/*"><br><br>
+      <label><input id="p_active" type="checkbox" checked> Ativo</label><br><br>
+      <button type="submit" class="botao">Publicar produto</button>
+    </form>
+
+    <hr>
+    <h3>Produtos cadastrados</h3>
+    <div id="list"></div>
+  </div>
 </div>
 
-<script>
-// util
-function el(id){return document.getElementById(id);}
-function uid(){return 'p_'+Math.random().toString(36).slice(2,9);}
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, serverTimestamp, getDocs, deleteDoc, doc, updateDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
 
-// carregar config do localStorage
-const CFG_KEY = 'pz_cfg';
-let cfg = JSON.parse(localStorage.getItem(CFG_KEY) || '{}');
-if(cfg.owner) el('ghOwner').value = cfg.owner;
-if(cfg.repo) el('ghRepo').value = cfg.repo;
-if(cfg.path) el('ghPath').value = cfg.path;
+const firebaseConfig = {
+  apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
+  authDomain: "primezilla-70b94.firebaseapp.com",
+  projectId: "primezilla-70b94",
+  storageBucket: "primezilla-70b94.firebasestorage.app",
+  appId: "1:910803172382:web:db82186d77b8281f13020f"
+};
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+const storage = getStorage(app);
 
-// produtos local
-const PROD_KEY = 'pz_products';
-let products = JSON.parse(localStorage.getItem(PROD_KEY) || '[]');
+// elements
+const loginForm = document.getElementById('loginForm');
+const adminArea = document.getElementById('adminArea');
+const authArea = document.getElementById('authArea');
+const who = document.getElementById('who');
+const listEl = document.getElementById('list');
+const addForm = document.getElementById('addForm');
 
-function saveLocal(){
-  localStorage.setItem(PROD_KEY, JSON.stringify(products));
+loginForm.addEventListener('submit', async (e)=>{
+  e.preventDefault();
+  const email = document.getElementById('email').value;
+  const pass = document.getElementById('password').value;
+  try{
+    const userCred = await signInWithEmailAndPassword(auth, email, pass);
+    showAdmin(userCred.user.email);
+  }catch(err){ alert('Erro ao logar: '+err.message); }
+});
+
+document.getElementById('logout').addEventListener('click', async ()=>{
+  await signOut(auth);
+  adminArea.style.display='none';
+  authArea.style.display='';
+});
+
+function showAdmin(email){
+  who.textContent = email;
+  authArea.style.display='none';
+  adminArea.style.display='';
+  loadList();
 }
 
-// render lista
-function renderList(){
-  const list = el('list'); list.innerHTML = '';
-  products.forEach(p=>{
+async function loadList(){
+  listEl.innerHTML = 'Carregando...';
+  const snap = await getDocs(collection(db,'products'));
+  listEl.innerHTML = '';
+  snap.forEach(d=>{
+    const p = d.data(); p._id = d.id;
     const div = document.createElement('div'); div.style.border='1px solid #eee'; div.style.padding='10px'; div.style.marginBottom='8px';
     div.innerHTML = `<strong>${p.name}</strong> — ${p.category} — ${p.price?('R$ '+Number(p.price).toFixed(2)):'Consultar'}<br>
-      <button data-id="${p.id}" class="editBtn">Editar</button>
-      <button data-id="${p.id}" class="delBtn" style="margin-left:6px;background:#c0392b">Excluir</button>
+      <button data-id="${p._id}" class="editBtn">Editar</button>
+      <button data-id="${p._id}" class="delBtn" style="margin-left:6px;background:#c0392b">Excluir</button>
     `;
-    list.appendChild(div);
+    listEl.appendChild(div);
   });
-  document.querySelectorAll('.editBtn').forEach(b=>b.addEventListener('click', e=>{
-    const id = e.currentTarget.dataset.id;
-    const p = products.find(x=>x.id===id);
-    if(!p) return;
-    el('p_id').value=p.id; el('p_name').value=p.name; el('p_price').value=p.price || '';
-    el('p_cat').value=p.category; el('p_type').value=p.type; el('p_opts').value=(p.options||[]).join(', ');
-    el('p_active').checked = !!p.active;
-    window.scrollTo(0,0);
-  }));
-  document.querySelectorAll('.delBtn').forEach(b=>b.addEventListener('click', async e=>{
+
+  document.querySelectorAll('.delBtn').forEach(b=>b.addEventListener('click', async (e)=>{
     if(!confirm('Excluir produto?')) return;
     const id = e.currentTarget.dataset.id;
-    products = products.filter(x=>x.id!==id);
-    saveLocal(); renderList();
-    // se config com token -> push para github
-    if(cfg.token && cfg.owner && cfg.repo) await pushToGitHub();
+    await deleteDoc(doc(db,'products',id));
+    loadList();
   }));
 }
 
-renderList();
-
-// salvar config
-el('saveConfig').addEventListener('click', ()=>{
-  cfg.owner = el('ghOwner').value.trim();
-  cfg.repo = el('ghRepo').value.trim();
-  cfg.path = el('ghPath').value.trim() || 'produtos.json';
-  cfg.token = el('ghToken').value.trim();
-  localStorage.setItem(CFG_KEY, JSON.stringify(cfg));
-  alert('Config salva localmente. Se inseriu token válido, admin gravará no repo.');
-});
-
-// submit product
-el('productForm').addEventListener('submit', async (ev)=>{
+addForm.addEventListener('submit', async (ev)=>{
   ev.preventDefault();
-  const id = el('p_id').value || uid();
-  const name = el('p_name').value.trim();
-  const price = parseFloat(el('p_price').value) || null;
-  const category = el('p_cat').value;
-  const type = el('p_type').value;
-  const options = el('p_opts').value.trim() ? el('p_opts').value.split(',').map(s=>s.trim()) : [];
-  const file = el('p_image').files[0];
-  const active = el('p_active').checked;
-  let imageData = null;
+  const name = document.getElementById('p_name').value.trim();
+  const price = parseFloat(document.getElementById('p_price').value) || null;
+  const category = document.getElementById('p_cat').value;
+  const type = document.getElementById('p_type').value;
+  const options = document.getElementById('p_opts').value.trim() ? document.getElementById('p_opts').value.split(',').map(s=>s.trim()) : [];
+  const file = document.getElementById('p_image').files[0];
+  const active = document.getElementById('p_active').checked;
 
+  let imageUrl = '';
   if(file){
-    imageData = await toBase64(file);
+    const path = `products/${Date.now()}_${file.name}`;
+    const stRef = ref(storage, path);
+    await uploadBytes(stRef, file);
+    imageUrl = await getDownloadURL(stRef);
   }
 
-  // update or add
-  const existing = products.find(x=>x.id===id);
-  const prodObj = {
-    id, name, price, currency: 'R$', category, type, options, active,
-    image: imageData || (existing?existing.image:null)
-  };
-  if(existing){
-    products = products.map(x=> x.id===id ? prodObj : x);
-  } else {
-    products.unshift(prodObj);
-  }
-  saveLocal(); renderList();
-  // push to GitHub if token set
-  if(cfg.token && cfg.owner && cfg.repo){
-    await pushToGitHub();
-  } else {
-    alert('Produto salvo localmente. Sem token, ficará apenas no seu navegador.');
-  }
-  // reset form
-  el('productForm').reset(); el('p_id').value='';
+  await addDoc(collection(db,'products'), {
+    name, price, currency:'R$', category, type, options, imageUrl, active, createdAt: serverTimestamp()
+  });
+
+  alert('Produto publicado');
+  addForm.reset();
+  loadList();
 });
-
-// export JSON
-el('exportBtn').addEventListener('click', ()=>{
-  const blob = new Blob([JSON.stringify(products, null, 2)],{type:'application/json'});
-  const a = document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='produtos.json'; a.click();
-});
-
-// base64 helper
-function toBase64(file){ return new Promise((res,rej)=>{const fr=new FileReader();fr.onload=()=>res(fr.result);fr.onerror=rej;fr.readAsDataURL(file);}); }
-
-// GITHUB functions
-async function getFileSha(){
-  const url = `https://api.github.com/repos/${cfg.owner}/${cfg.repo}/contents/${cfg.path}`;
-  const r = await fetch(url, {headers:{Authorization:'token '+cfg.token}});
-  if(r.status===200){
-    const j = await r.json();
-    return j.sha;
-  } else if(r.status===404){
-    return null;
-  } else {
-    throw new Error('Erro ao obter SHA: '+r.status);
-  }
-}
-async function pushToGitHub(){
-  try{
-    const sha = await getFileSha();
-    const content = btoa(unescape(encodeURIComponent(JSON.stringify(products, null, 2))));
-    const url = `https://api.github.com/repos/${cfg.owner}/${cfg.repo}/contents/${cfg.path}`;
-    const body = {
-      message: 'Atualizar produtos via Admin',
-      content,
-      branch: 'main'
-    };
-    if(sha) body.sha = sha;
-    const res = await fetch(url, {
-      method: 'PUT',
-      headers: {
-        Authorization: 'token '+cfg.token,
-        'Content-Type':'application/json'
-      },
-      body: JSON.stringify(body)
-    });
-    if(res.status===201 || res.status===200){
-      alert('Produtos enviados ao GitHub com sucesso. Aguarde o Pages atualizar ( ~1 min ).');
-    } else {
-      const txt = await res.text();
-      alert('Erro ao enviar ao GitHub: '+res.status + ' — ' + txt);
-    }
-  }catch(err){ alert('Erro pushToGitHub: '+err.message); }
-}
 </script>
 </body>
 </html>
