--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>PrimeZilla — Loja</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PrimeZilla — Eletrônicos & Variedades</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="topo">
-  <img src="logo.png" class="logo" alt="PrimeZilla">
-  <nav>
+  <div class="brand">
+    <img src="logo.png" alt="PrimeZilla" class="logo">
+  </div>
+  <nav class="nav">
     <a href="index.html">Início</a>
     <a href="produtos.html">Produtos</a>
     <a href="admin.html">Admin</a>
@@ -17,25 +19,28 @@
   </nav>
 </header>
 
-<main>
-  <section class="hero">
+<section class="hero neon">
+  <div class="hero-inner">
     <h1>PrimeZilla</h1>
-    <p>Produtos selecionados — clique e compre pelo WhatsApp</p>
-  </section>
+    <p>Eletrônicos & Variedades — entrega rápida em Jardim e Guia Lopes</p>
+  </div>
+</section>
 
+<main class="container">
   <section class="catalog">
+    <h2>Destaques</h2>
     <div id="productsGrid" class="grid">Carregando produtos...</div>
   </section>
 </main>
 
-<footer>© 2025 PrimeZilla</footer>
+<footer class="footer">
+  © 2025 PrimeZilla — Entrega gratuita em Jardim e Guia Lopes
+</footer>
 
-<!-- Firebase & client script (módulo) -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getFirestore, collection, query, where, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+  import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-  // --- seu firebaseConfig (já preenchido) ---
   const firebaseConfig = {
     apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
     authDomain: "primezilla-70b94.firebaseapp.com",
@@ -44,65 +49,58 @@
     appId: "1:910803172382:web:db82186d77b8281f13020f"
   };
 
+  const PHONE = '5567992018672'; // seu WhatsApp
+
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
 
-  // telefone do WhatsApp (sem +, sem espaços)
-  const PHONE = '5567992018672';
+  function esc(s){ return String(s||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])); }
 
-  function escapeHtml(s){ return String(s||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])); }
-
-  document.addEventListener('DOMContentLoaded', ()=> {
-    const container = document.getElementById('productsGrid');
-    container.innerHTML = '';
-
-    // consulta: todos os produtos ativos, ordenados por createdAt desc
+  document.addEventListener('DOMContentLoaded', ()=>{
+    const grid = document.getElementById('productsGrid');
     const q = query(collection(db,'products'), orderBy('createdAt','desc'));
     onSnapshot(q, snap => {
-      container.innerHTML = '';
+      grid.innerHTML = '';
       snap.forEach(doc => {
         const p = doc.data();
         if(!p.active) return;
-        const priceText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
         const img = p.imageUrl || p.image || 'placeholder.png';
-        const card = document.createElement('div'); card.className = 'card';
+        const priceText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
+        const card = document.createElement('div'); card.className='card';
         card.innerHTML = `
-          <img src="${escapeHtml(img)}" alt="${escapeHtml(p.name)}">
-          <h3>${escapeHtml(p.name)}</h3>
-          <p class="price">${escapeHtml(priceText)}</p>
-          <div class="controls">
-            <label>Qtd
-              <select class="qty"><option>1</option><option>2</option><option>3</option></select>
-            </label>
-            <label>${(p.type==='pod')? 'Sabor' : 'Cor'}
-              <select class="variant">${(p.options||[]).map(o=>`<option>${escapeHtml(o)}</option>`).join('')}</select>
-            </label>
-            <label>Pagamento
-              <select class="pay"><option>PIX</option><option>Dinheiro</option><option>Cartão</option></select>
-            </label>
-            <button class="btnBuy">Comprar (WhatsApp)</button>
+          <div class="media"><img src="${esc(img)}" alt="${esc(p.name)}"></div>
+          <div class="info">
+            <h3>${esc(p.name)}</h3>
+            <p class="price">${esc(priceText)}</p>
+            <div class="controls">
+              <label>Qtd
+                <select class="qty"><option>1</option><option>2</option><option>3</option></select>
+              </label>
+              <label>${p.type==='pod' ? 'Sabor' : 'Cor'}
+                <select class="variant">${(p.options||[]).map(o=>`<option>${esc(o)}</option>`).join('')}</select>
+              </label>
+              <label>Pagamento
+                <select class="pay"><option>PIX</option><option>Dinheiro</option><option>Cartão</option></select>
+              </label>
+              <button class="btnBuy">Comprar (WhatsApp)</button>
+            </div>
           </div>
         `;
-        // evento botão
         card.querySelector('.btnBuy').addEventListener('click', ()=>{
           const qtd = card.querySelector('.qty').value;
           const variant = card.querySelector('.variant').value || '-';
           const pay = card.querySelector('.pay').value;
-          const valorText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
           const variantLabel = (p.type==='pod') ? 'Sabor' : 'Cor';
-          const text = encodeURIComponent(
-            `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${variantLabel}: ${variant}\nValor: ${valorText}\nForma de Pagamento: ${pay}`
-          );
-          window.open(`https://wa.me/${PHONE}?text=${text}`, '_blank');
+          const valorText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
+          const text = encodeURIComponent(`Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${variantLabel}: ${variant}\nValor: ${valorText}\nForma de Pagamento: ${pay}`);
+          window.open(`https://wa.me/${PHONE}?text=${text}`,'_blank');
         });
-
-        container.appendChild(card);
+        grid.appendChild(card);
       });
-
-      if(container.innerHTML === '') container.innerHTML = '<p>Nenhum produto disponível.</p>';
+      if(grid.innerHTML==='') grid.innerHTML = '<p>Nenhum produto disponível.</p>';
     }, err=>{
+      grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
       console.error(err);
-      container.innerHTML = '<p>Erro ao carregar produtos.</p>';
     });
   });
 </script>
