--- a/index.html
+++ b/index.html
@@ -1,109 +1,44 @@
-<!doctype html>
-<html lang="pt-BR">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PrimeZilla — Eletrônicos & Variedades</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<header class="topo">
-  <div class="brand">
-    <img src="logo.png" alt="PrimeZilla" class="logo">
-  </div>
-  <nav class="nav">
-    <a href="index.html">Início</a>
-    <a href="produtos.html">Produtos</a>
-    <a href="admin.html">Admin</a>
-    <a href="contato.html">Contato</a>
-  </nav>
-</header>
-
-<section class="hero neon">
-  <div class="hero-inner">
-    <h1>PrimeZilla</h1>
-    <p>Eletrônicos & Variedades — entrega rápida em Jardim e Guia Lopes</p>
-  </div>
-</section>
-
-<main class="container">
-  <section class="catalog">
-    <h2>Destaques</h2>
-    <div id="productsGrid" class="grid">Carregando produtos...</div>
-  </section>
-</main>
-
-<footer class="footer">
-  © 2025 PrimeZilla — Entrega gratuita em Jardim e Guia Lopes
-</footer>
-
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+  // Import Firebase
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
   const firebaseConfig = {
-    apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
-    authDomain: "primezilla-70b94.firebaseapp.com",
-    projectId: "primezilla-70b94",
-    storageBucket: "primezilla-70b94.firebasestorage.app",
-    appId: "1:910803172382:web:db82186d77b8281f13020f"
+    apiKey: "AIzaSyDddbo-41Pz1xxpWcHbQqd7GfC5y4iQYDU",
+    authDomain: "primezilla-e-commerce.firebaseapp.com",
+    projectId: "primezilla-e-commerce",
+    storageBucket: "primezilla-e-commerce.appspot.com",
+    messagingSenderId: "925186933179984",
+    appId: "1:925186933179984:web:ea77247f15953df3df39cd"
   };
-
-  const PHONE = '5567992018672'; // seu WhatsApp
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
 
-  function esc(s){ return String(s||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])); }
+  const destaquesContainer = document.getElementById("destaques");
 
-  document.addEventListener('DOMContentLoaded', ()=>{
-    const grid = document.getElementById('productsGrid');
-    const q = query(collection(db,'products'), orderBy('createdAt','desc'));
-    onSnapshot(q, snap => {
-      grid.innerHTML = '';
-      snap.forEach(doc => {
-        const p = doc.data();
-        if(!p.active) return;
-        const img = p.imageUrl || p.image || 'placeholder.png';
-        const priceText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
-        const card = document.createElement('div'); card.className='card';
-        card.innerHTML = `
-          <div class="media"><img src="${esc(img)}" alt="${esc(p.name)}"></div>
-          <div class="info">
-            <h3>${esc(p.name)}</h3>
-            <p class="price">${esc(priceText)}</p>
-            <div class="controls">
-              <label>Qtd
-                <select class="qty"><option>1</option><option>2</option><option>3</option></select>
-              </label>
-              <label>${p.type==='pod' ? 'Sabor' : 'Cor'}
-                <select class="variant">${(p.options||[]).map(o=>`<option>${esc(o)}</option>`).join('')}</select>
-              </label>
-              <label>Pagamento
-                <select class="pay"><option>PIX</option><option>Dinheiro</option><option>Cartão</option></select>
-              </label>
-              <button class="btnBuy">Comprar (WhatsApp)</button>
-            </div>
-          </div>
-        `;
-        card.querySelector('.btnBuy').addEventListener('click', ()=>{
-          const qtd = card.querySelector('.qty').value;
-          const variant = card.querySelector('.variant').value || '-';
-          const pay = card.querySelector('.pay').value;
-          const variantLabel = (p.type==='pod') ? 'Sabor' : 'Cor';
-          const valorText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
-          const text = encodeURIComponent(`Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${variantLabel}: ${variant}\nValor: ${valorText}\nForma de Pagamento: ${pay}`);
-          window.open(`https://wa.me/${PHONE}?text=${text}`,'_blank');
-        });
-        grid.appendChild(card);
-      });
-      if(grid.innerHTML==='') grid.innerHTML = '<p>Nenhum produto disponível.</p>';
-    }, err=>{
-      grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
-      console.error(err);
+  async function carregarProdutos() {
+    destaquesContainer.innerHTML = "<p>Carregando...</p>";
+
+    const produtosSnapshot = await getDocs(collection(db, "produtos"));
+    if (produtosSnapshot.empty) {
+      destaquesContainer.innerHTML = "<p>Nenhum produto disponível.</p>";
+      return;
+    }
+
+    destaquesContainer.innerHTML = "";
+    produtosSnapshot.forEach(doc => {
+      const produto = doc.data();
+      const item = document.createElement("div");
+      item.className = "produto-card";
+      item.innerHTML = `
+        <img src="${produto.imagem}" alt="${produto.nome}">
+        <h3>${produto.nome}</h3>
+        <p>R$ ${produto.preco}</p>
+      `;
+      destaquesContainer.appendChild(item);
     });
-  });
+  }
+
+  carregarProdutos();
 </script>
-</body>
-</html>
-<script type="module" src="/script.js"></script>
