--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Produtos — PrimeZilla</title><link rel="stylesheet" href="style.css"></head>
 <body>
 <header class="topo">
-  <img src="logo.png" class="logo" alt="PrimeZilla">
+ <img src="https://res.cloudinary.com/duwsueept/image/upload/ersuwnmpqepkaosb85gf" class="logo" alt="PrimeZilla">
   <nav><a href="index.html">Início</a><a href="produtos.html">Produtos</a><a href="admin.html">Admin</a></nav>
 </header>
 
