--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
 <header class="topo">
   <div class="brand">
-    <img src="<img src="https://res.cloudinary.com/duwsueept/image/upload/ersuwnmpqepkaosb85gf" class="logo" alt="PrimeZilla">
-">
+    <img src="https://res.cloudinary.com/duwsueept/image/upload/ersuwnmpqepkaosb85gf" class="logo" alt="PrimeZilla">
   </div>
   <nav class="nav">
     <a href="index.html">Início</a>
