--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 </main>
 
 <footer class="footer">
-  © 2025 PrimeZilla — Entrega gratuita em Jardim e Guia Lopes
+  © 2025 PrimeZilla — site criado por JHON_LORRAN_
 </footer>
-
+<script type="module" src="script.js"></script>
+  
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
   import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
