--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </main>
 
 <footer class="footer">
-  © 2025 PrimeZilla — site criado por JHON_LORRAN_
+  © 2025 PrimeZilla — SITE CRIADO POR @JHON_LORRAN_
 </footer>
 <script type="module" src="script.js"></script>
   
